--- a/resources/views/frontend/produtos/create.edge
+++ b/resources/views/frontend/produtos/create.edge
@@ -35,7 +35,7 @@
       </div>
 
       <div class="label-float">
-        <input type="number" step="0.01" fata-mask= "#.##0,00" min="0" autocomplete="off" id="money" placeholder=" " name="valor_compra" value="{{ old('valor_compra', '') }}" required/>
+        <input type="number" step="0.01" min="0" autocomplete="off" placeholder=" " name="valor_compra" value="{{ old('valor_compra', '') }}" required/>
         <label>Valor Compra</label>
         @if(hasErrorFor('valor_compra'))
         <span class= "mens-error"> {{ getErrorFor('valor_compra') }} </span>
@@ -43,7 +43,7 @@
       </div>
 
       <div class="label-float">
-        <input type="number" step="0.01" min="0" placeholder=" " id="valor_venda"name="valor_venda" value="{{ old('valor_venda', '') }}" required/>
+        <input type="number" step="0.01" min="0" placeholder=" " name="valor_venda" value="{{ old('valor_venda', '') }}" required/>
         <label>Valor Venda</label>
         @if(hasErrorFor('valor_venda'))
         <span class= "mens-error"> {{ getErrorFor('valor_venda') }} </span>
@@ -66,14 +66,3 @@
 
 
 @endsection
-<script src="public\jquery\jquery-3.6.0.min.js"></script>
-<script src="public\jquery\jquery.mask.js"></script>
-
-<script>
-
-  $(document).ready(function(){
-    $('#money').mask('000.000.000.000.000,00', {reverse: true});
-    }
-      
-  
-</script>       
