--- a/resources/views/frontend/servicos/show.edge
+++ b/resources/views/frontend/servicos/show.edge
@@ -40,7 +40,7 @@
 
       <div class="label-edit">
         <label>Valor: </label>
-        <input disabled type="number" name="valor" value="{{ servico.valor }}" class="form-control" required/>
+        <input disabled type="text" name="valor" value="{{ servico.valor }}" class="form-control" required/>
       </div>
     </table>
 
