--- a/resources/views/layouts/master.edge
+++ b/resources/views/layouts/master.edge
@@ -14,14 +14,11 @@
 
         <!-- Icons -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
-        <!-- Datalist -->
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-
-        <!-- máscaras-->
         
+        <!-- JQuery -->
+        {{ script("https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js") }}
+        {{ script("https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.13/jquery.mask.min.js") }}
+               
     </head>
 
     <body>
@@ -34,10 +31,6 @@
         <!-- Lado direito-->
         @!section('content')
 
-        <!--Tasklist-->
-
-        {{--  @!sectiontasklist('layout.tasklist')  --}}
-  
         <!-- Scripts JavaScript-->
         @!section('scripts')
         
