Correção SHOW Ordem Servico, input data entrada

--- a/resources/views/frontend/ordensservicos/show.edge
+++ b/resources/views/frontend/ordensservicos/show.edge
@@ -40,7 +40,7 @@
 
 
         <div class="label-float">
-          <input type="text" name="data" value="{{ ordensservico.data_entrada }}" readonly/>
+          <input type="date" name="data_entrada" value="{{ ordensservico.data_entrada }}" readonly/>
           <label>Data da Entrada</label>
         </div>
       
