--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -873,18 +873,25 @@ span.mens-error {
   height: 200px;
   display: flex;
   flex-direction:row;
-  align-content:space-between
-  
+  align-content:space-between;
+  padding-left: 35px;
 }
-#div-relatorios{
-  margin:auto;
-  padding: 30px;
-  flex-direction: column;
-  
 
+#div-relatorios{
+  
+  padding-top: 90px;
+  padding-left: 55px;
+  flex-direction: column;
   
  
 }
+
+#drop-list-mes-ano {
+  margin-top: 70px;
+  margin-left: 120px;
+}
+
+
 .botao-consulta-os {
   border: 2px solid #707070;
   border-radius: 25px;
@@ -895,9 +902,35 @@ span.mens-error {
   width: 150px;
   height: 50px;
   margin-top: 30px;
-  float: left;
-  margin-left: 30px;
+  float: right;
+  margin-right: -480px;
 }
+
+.botao-consulta-os2 {
+  border: 2px solid #707070;
+  border-radius: 25px;
+  background-color: white;
+  color: #707070;
+  font-size: 16px;
+  cursor: pointer;
+  width: 150px;
+  height: 50px;
+  margin-top: 30px;
+  float: right;
+  margin-right: -435px;
+}
+
+#lista-relatorio {
+  margin-top: 160px;
+  width: 970px;
+  height: 600px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: -3px -5px 6px #00000024;
+  border-radius: 15px;
+  opacity: 1;
+  float: right;
+}
+
 #icone-next{
   
   color: #5a5858;
@@ -918,6 +951,7 @@ span.mens-error {
   margin-left: 20px;
   margin-bottom: 10px;
 }
+
 #icone-before{
  
   color: #5a5858;
