--- a/resources/views/layouts/menu.edge
+++ b/resources/views/layouts/menu.edge
@@ -2,7 +2,7 @@
       <ul>
         @loggedIn
         <li class="nav-item">
-          <a id="cor" class="nav-link" href="/os">Ordem de Serviço</a>
+          <a id="cor" class="nav-link" href="/os">Ordens de Serviço</a>
         </li>
         <li class="nav-item">
           <a id="cor" class="nav-link" href="/clientes">Clientes</a>
